# fast-stt

./: README.md  pyproject.toml  run.bat  setup.bat
scripts/: download_model.py  preflight.py  test.bat
src/fast_stt/: __main__.py  __main_api__.py  api.py  app.py  cli_download.py  engine.py  formatting.py  paths.py  serve.py
src/fast_stt/utils/: cuda_loader.py
